tests/compile_fail/eq/non_eq_field.stderr
error[E0277]: the trait bound `f32: std::cmp::Eq` is not satisfied
 --> tests/compile_fail/eq/non_eq_field.rs:1:10
  |
1 | #[derive(derive_more::Eq)]
  |          ^^^^^^^^^^^^^^^ the trait `std::cmp::Eq` is not implemented for `f32`
  |
  = help: the following other types implement trait `std::cmp::Eq`:
            i128
            i16
            i32
            i64
            i8
            isize
            u128
            u16
          and $N others
  = help: see issue #48214
  = note: this error originates in the derive macro `derive_more::Eq` (in Nightly builds, run with -Z macro-backtrace for more info)
